--- a/BlogposterCMS/apps/designer/assets/scss/_variables.scss
+++ b/BlogposterCMS/apps/designer/assets/scss/_variables.scss
@@ -115,7 +115,8 @@
   --z-popover: 160;
   --z-tooltip: 170;
   --z-toast: 180;
-  
+  --z-toolbar: 190;
+
   // Component specific variables
   --toolbar-height: 48px;
   --header-height: 64px;
